--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>webos</title>
+    <title>Richy</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -22,35 +22,35 @@
       <div class="header-content animated flash">
         <img src="img/logo.png" alt="Fazt Logo" class="logo">
         <div class="title">
-          WEBOS
+          Ricardo Martinez
         </div>
         <div class="text">
-          El omar va a componerme mis canciones sisisisisi, por que anda de mamoncito
+          Soy desarrollador fullstack javascript, actualmente estudiando informatica en la Escuela Politecnica de Guadalajara
         </div>
       </div>
     </header>
 
     <!-- webos -->
     <div class="services text-center">
-      <h3 class="title">webudos</h3>
+      <h3 class="title">Servicios</h3>
       <div class="container grid-3">
         <div>
           <img src="img/pig.png"></img>
-          <h3>Omar</h3>
+          <h3>Desarrollo Web</h3>
           <div>
             Un pendejo acomplejado mamador. a veces es buena onda
           </div>
         </div>
         <div>
           <img src="img/piger.png"></img>
-          <h3>Miguel</h3>
+          <h3>Desarrollo de Software</h3>
           <div>
             Virgen de minecraft, fortnite y cualquier videojuego que toca.
           </div>
         </div>
         <div>
           <img src="img/ofrenda.png"></img>
-          <h3>Patricio</h3>
+          <h3>Reparaciones y Manenimiento</h3>
           <div>
             Virgen de doom, autista, metalero, no se baña :).
           </div>
@@ -66,9 +66,9 @@
             <img src="img/jerk.png"></img>
           </div>
           <div>
-            <h3 class="title">EGGS</h3>
+            <h3 class="title">Quien soy</h3>
             <p>
-              <span>Soy compositor nato, no dependo enteramente de la teoria musical para componer asombrosas canciones que le gustan a la gente.</span>
+              <span>Soy una persona apasionada por la programacion, el baloncesto y por el bajo electrico, nuunca paro de aprender. Me encanta diseñar y programar cosas, tengo 5 años de experiencia desarrollando sitios web con diversas tematicas y es algo que me gusta mucho.</span>
             </p>
           </div>
         </div>
@@ -79,9 +79,9 @@
       <div class="container text-center">
         <div class="grid-2">
           <div>
-            <h3 class="title">Acerca</h3>
+            <h3 class="title">Objetivos</h3>
             <p>
-              <span>Omar no puede componer una cancion basada en una linea de bajo, pero yo si puedo hacer una pagina web si me dan solo 2 lineas de codigo. Tambien puedo componer basado en lo que me des :D .</span>
+              <span>Contribuir en el desarrollo tecnologico del mundo y crear cosas utiles para la humanidad, que nos faciliten la existencia y sean accesibles para todos</span>
             </p>
           </div>
           <div class="center">
@@ -93,7 +93,7 @@
 
     <!-- Footer -->
     <footer class="text-center bg-light">
-      <p>Ricardo Martinez &copy; 2020 - Omar es un cascarrabias :D</p>
+      <p>Ricardo Martinez &copy; 2020 - Todos los derechos reservados xd</p>
     </footer>
 
   </body>
